# nix-flake-age-filter

./: .gitignore  AGENTS.md  ARCHITECTURE.md  EXTERNAL_TOOLS.md  README.md  flake.nix  flake_age_common.py  pyproject.toml  setup.cfg  setup.py  shell.nix
docs/: ARCHITECTURE.md  EXTERNAL_TOOLS.md  PERFORMANCE_OPTIMIZATION.md  design.md
nix/: default.nix
src/: README.md  __init__.py  age_check.py  flake_age_common.py  flake_age_types.py  flake_lock.py  git_operations.py  nix_flake_age_filter.py  nix_flake_age_update.py  nix_flake_age_update_standalone.py  nix_flake_age_verify.py
src/flake_age_filter/: __init__.py
src/flake_age_filter/cli/: __init__.py  _common.py  main.py  update.py  verify.py
src/flake_age_filter/core/: __init__.py  age_check.py  errors.py  flake_input.py  git_ops.py  lock_file.py  models.py  parallel.py
src/flake_age_filter/core/backends/: __init__.py  base.py  github_api_backend.py  pygit2_backend.py  registry.py  subprocess_backend.py
src/flake_age_filter/output/: formatters.py
src/flake_age_filter/standalone/: update.py
tests/: __init__.py  flake.nix  test_lock_file.py  test_models.py  test_path_input_skip.py
tests/integration/: test_integration.py
tests/unit/: test_age_check.py  test_github_api_backend.py  test_pygit2_backend.py  test_subprocess_backend.py  test_update_cli.py  test_verify_cli.py
