[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["flake_age_filter", "flake_age_filter.cli", "flake_age_filter.core", "flake_age_filter.output", "flake_age_filter.standalone"]


[project]
name = "nix-flake-age-filter"
version = "0.1.0"
description = "Nix flake input age filter CLI"
authors = [{name = "impure0xntk", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["rich>=13.0.0", "typer>=0.12.0"]

[project.scripts]
nix-flake-age = "nix_flake_age_filter.nix_flake_age_update:main"
